# fluent_python_notes

./: Makefile  README.html  _config.yml  _toc.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
Data_Structures/: chapter1.html  chapter1.ipynb  chapter2.html  chapter3.html  title.html
Data_Structures/chapter1/: chapter1.html  title.html
Data_Structures/chapter2/: chapter2.html  chapter2.ipynb  title.html
_build/.doctrees/: README.doctree  environment.pickle  index.doctree
_build/.doctrees/Data_Structures/: chapter1.doctree  chapter2.doctree  chapter3.doctree  title.doctree
_build/.doctrees/Data_Structures/chapter1/: chapter1.doctree  title.doctree
_build/.doctrees/Data_Structures/chapter2/: chapter2.doctree  title.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/Data_Structures/: chapter2.html  title.html
_build/html/Data_Structures/chapter1/: chapter1.html
_build/html/Data_Structures/chapter2/: chapter2.html  title.html
_build/html/_sources/Data_Structures/: chapter3.ipynb
_build/jupyter_execute/Data_Structures/: chapter1.ipynb  chapter2.ipynb  chapter3.ipynb
_build/jupyter_execute/Data_Structures/chapter2/: chapter2.ipynb
_sources/: index.md
_sources/Data_Structures/: chapter2.ipynb
_sources/Data_Structures/chapter1/: title.md
_sources/Data_Structures/chapter2/: chapter2.ipynb  title.md
chapter2/: chapter2.html
