[project]
name = "fluent-python-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "ghp-import>=2.1.0",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
    "numpy>=2.2.3",
    "ruff>=0.9.7",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
